@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 20:53:39 brook Exp $
+
+SHA1 (R/shinyjs_1.0.tar.gz) = fa36eda314cbc012b4feb9f4714f34e486dc0b4e
+RMD160 (R/shinyjs_1.0.tar.gz) = 83a4ed7ca02bfd7064c0feda62a65a8ec6104432
+SHA512 (R/shinyjs_1.0.tar.gz) = 368eeff4c0897830716bf6d07564948eea36d8948a03a9b31867d6c05bbc488ac1d1be9b9e781b1b95d744675786952f3ddba68d58c6c35641540240df1b5392
+Size (R/shinyjs_1.0.tar.gz) = 954365 bytes
